--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>John Larson</h1>
+    <h2>Notes and exercises</h2>
+    <a href="notes01.html">Week 1</a>
 </body>
 </html>
