bit of style, more notes

--- a/notes01.html
+++ b/notes01.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Week 1 Notes</title>
 </head>
 <body>
     <h2>Local storage</h2>
     <p>To store something in javascript: localStorage.setItem(key, value)</p>
     <p>To load something stored: localStorage.getItem(key)</p>
+    <h3>Questions</h3>
+    <ol>
+        <li>Where exactly are the things in localStorage located, and how long are they stored there?</li>
+    </ol>
 </body>
 </html>
