--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Index</title>
 </head>
 <body>
-    <h1>John Larson</h1>
+    <h1>John Larson's WDD330 portfolio</h1>
     <h2>Notes and exercises</h2>
-    <a href="notes01.html">Week 1</a>
+    <ol>
+        <li><a href="notes01.html">Week 1</a></li>
+    </ol>
 </body>
 </html>
