--- a/notes01.html
+++ b/notes01.html
@@ -14,5 +14,17 @@
     <ol>
         <li>Where exactly are the things in localStorage located, and how long are they stored there?</li>
     </ol>
+    <h2>Mobile Design</h2>
+    <ul>
+        <li>Design for mobile FIRST</li>
+        <li>Don't make users hunt for what they want</li>
+        <li>Remove unneccessary steps, make things quick</li>
+        <li>Reduce image use, use svg/webfonts</li>
+        <li>"Menu" with border (looks like button) got most clicks</li>
+        <li>Reduce "cognitive load"</li>
+        <li>Forms: multiple pages + progress bar. Autocomplete enabled.</li>
+        <li>Show passwords by default, but do give the option to hide</li>
+    </ul>
+    
 </body>
 </html>
