Add link to week 2 on index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>Notes and exercises</h2>
     <ol>
         <li><a href="notes01.html">Week 1</a></li>
+        <li><a href="notes02.html">Week 2</a></li>
     </ol>
 </body>
 </html>
