--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <ol>
         <li><a href="notes01.html">Week 1</a></li>
         <li><a href="notes02.html">Week 2</a></li>
-        <l1>Week 3</l1>
-        <l1><a href="notes04.html"></a></l1>
+        <li>Week 3</li>
+        <li><a href="notes04.html"></a></li>
     </ol>
 </body>
 </html>
