--- a/notes04.html
+++ b/notes04.html
@@ -29,11 +29,11 @@
     </ul>
     <h2>Chapter 12: Object-Oriented Programming</h2>
     <ul>
-        <l1>Javascript is a prototype-based language rather than a class-based language. This means 
+        <li>Javascript is a prototype-based language rather than a class-based language. This means 
             that OOP in Javascript involves making an object and then reusing it instead of making a
             blueprint (class) as in C++ or Java. (Javascript does have classes after ES6 but it uses 
             the prototype model in the background)
-        </l1>
+        </li>
         <li>Parentheses are not required when instantiating a new object using a constructor function.
             const redDice = new Dice;. If arguments need to provided, then parentheses are required.
         </li>
