--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li><a href="notes01.html">Week 1</a></li>
         <li><a href="notes02.html">Week 2</a></li>
         <li>Week 3</li>
-        <li><a href="notes04.html"></a></li>
+        <li><a href="notes04.html">Week 4</a></li>
+        <li><a href="notes05.html">Week 5</a></li>
     </ol>
 </body>
 </html>
