--- a/todo/app.html
+++ b/todo/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <h1>Todos</h1>
