Most functionality implemented, untested

--- a/todo/app.html
+++ b/todo/app.html
@@ -13,7 +13,7 @@
         <div id="list-footer"> tasks left </div>
     </div>
     <form id="add-task">
-        <textarea></textarea>
+        <textarea id="new-item"></textarea>
         <button id="add">+</button>
     </form>
 </body>
