--- a/todo/app.html
+++ b/todo/app.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Todos</h1>
-    <div id="list">
+    <div>
+        <ul id="list">
+        </ul>
         <div id="list-footer"> tasks left </div>
     </div>
     <form id="add-task">
