Non-functioning buttons added

--- a/todo/app.html
+++ b/todo/app.html
@@ -15,7 +15,7 @@
         <div id="list-footer"> tasks left </div>
     </div>
     <form id="add-task">
-        <textarea id="new-item"></textarea>
+        <input id="new-item" placeholder="Type here"></input>
         <button id="add">+</button>
     </form>
 </body>
