--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>John Larson's WDD330 portfolio</h1>
+    <h2>Todo List Challenge</h2>
+    <a href="/todo/app.html">Todo List Challenge</a>
     <h2>Notes and exercises</h2>
     <ol>
         <li><a href="notes01.html">Week 1</a></li>
         <li><a href="notes02.html">Week 2</a></li>
-        <li>Week 3</li>
+        <li><a href="notes03.html">Week 3</a></li>
         <li><a href="notes04.html">Week 4</a></li>
         <li><a href="notes05.html">Week 5</a></li>
     </ol>
