--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>John Larson's WDD330 portfolio</h1>
     <h2>Todo List Challenge</h2>
-    <a href="/todo/app.html">Todo List Challenge</a>
+    <a href="/wdd330/todo/app.html">Todo List Challenge</a>
     <h2>Notes and exercises</h2>
     <ol>
         <li><a href="notes01.html">Week 1</a></li>
