--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="notes03.html">Week 3</a></li>
         <li><a href="notes04.html">Week 4</a></li>
         <li><a href="notes05.html">Week 5</a></li>
+        <li><a href="notes07.html">Week 7</a></li>
     </ol>
 </body>
 </html>
