in todo, adding and removing is now functional

--- a/todo/app.html
+++ b/todo/app.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1>Todos</h1>
-    <div>
-        <ul id="list">
-        </ul>
-        <div id="list-footer"> tasks left </div>
-    </div>
+        <div id="list" class="row">
+        <div id="col1" class="column left"></div>
+        <div id="col2" class="column middle"></div>
+        <div id="col3" class="column right"></div></div>
+        <div id="list-footer"> tasks left</div>
+        
     <form id="add-task">
         <input id="new-item" placeholder="Type here"></input>
         <button id="add">+</button>
