To-do list fully working

--- a/todo/app.html
+++ b/todo/app.html
@@ -12,8 +12,9 @@
         <div id="list" class="row">
         <div id="col1" class="column left"></div>
         <div id="col2" class="column middle"></div>
-        <div id="col3" class="column right"></div></div>
-        <div id="list-footer"> tasks left</div>
+        <div id="col3" class="column right"></div>
+        </div><div id="list-footer"></div>
+        
         
     <form id="add-task">
         <input id="new-item" placeholder="Type here"></input>
