--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="notes04.html">Week 4</a></li>
         <li><a href="notes05.html">Week 5</a></li>
         <li><a href="notes07.html">Week 7</a></li>
+        <li><a href="notes08.html">Week 8</a></li>
     </ol>
 </body>
 </html>
