Whoops, forgot to update index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="notes05.html">Week 5</a></li>
         <li><a href="notes07.html">Week 7</a></li>
         <li><a href="notes08.html">Week 8</a></li>
+        <li><a href="notes09.html">Week 9</a></li>
     </ol>
 </body>
 </html>
