--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="notes07.html">Week 7</a></li>
         <li><a href="notes08.html">Week 8</a></li>
         <li><a href="notes09.html">Week 9</a></li>
+        <li><a href="notes10.html">Week 10</a></li>
     </ol>
 </body>
 </html>
