A couple buttons that return a list of game titles

--- a/games/index.html
+++ b/games/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game List Maker</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="main.js"></script>
 </head>
 <body>
-    <h1>Game List Maker</h1>
-    <p>All game data from <a href="https://rawg.io">RAWG video games database.</a></p>
-    <main>
-        <div>
-            Hello.
-        </div>
-    </main>
+    <div class="blue"><h1>GAME LIST MAKER</h1></div>
+    <div class="green"><h3>A Mobile App for Making Lists of Games</h3></div>
+    <div class="red"><p >All game data from <a href="https://rawg.io">RAWG video games database.</a></p></div>
+    <div class="dark"><p>Press the buttons below to see some games, or use the searchbar.</p></div>
+    <div id="mainbody">   
+    </div>
+  
     
 </body>
 </html>
