The user can now create lists. todo: view, add

--- a/games/index.html
+++ b/games/index.html
@@ -11,7 +11,7 @@
     <div class="blue"><h1>GAME LIST MAKER</h1></div>
     <div class="green"><h3>A Mobile App for Making Lists of Games</h3></div>
     <div class="red"><p >All game data from <a href="https://rawg.io">RAWG video games database.</a></p></div>
-    <div class="dark"><p>Press the buttons below to see some games, or use the searchbar.</p></div>
+    <div class="dark"><p>Browse recent or future hits, or use the searchbar to find your favorites. Then press the Add button to put a game on a list!</p></div>
     <div id="mainbody">   
     </div>
   
