Added some previous work to portfolio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <h1>John Larson's WDD330 portfolio</h1>
     <h2>Todo List Challenge</h2>
     <a href="/wdd330/todo/app.html">Todo List Challenge</a>
+    <h2>Challenge 2: Game List Maker</h2>
+    <a href="/wdd330/games/index.html">Game List Maker</a>
+    <a href="IMG_0216.png">A look at the planning process</a>
+    <h2>Team Activity Examples</h2>
+    <a href="week10/index.html">Week 10</a>
+    <a href="javascript30-drums/index-START.html">Drums</a>
+    <a href="apis/teamActivity2.html">Pokemon</a>
     <h2>Notes and exercises</h2>
     <ol>
         <li><a href="notes01.html">Week 1</a></li>
