Fixed incorrect link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="/wdd330/games/index.html">Game List Maker</a>
     <a href="IMG_0216.png">A look at the planning process</a>
     <h2>Team Activity Examples</h2>
-    <a href="week10/index.html">Week 10</a>
+    <a href="week10/teamActivity.html">Week 10</a>
     <a href="javascript30-drums/index-START.html">Drums</a>
     <a href="apis/teamActivity2.html">Pokemon</a>
     <h2>Notes and exercises</h2>
