--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>John Larson's WDD330 portfolio</h1>
+    <a href=https://youtu.be/JEqWnB-ndEY><h2>MY SELF-EVALUATION</h2></a>
     <h2>Todo List Challenge</h2>
     <a href="/wdd330/todo/app.html">Todo List Challenge</a>
     <h2>Challenge 2: Game List Maker</h2>
